syntax = "proto3";

package drillbit.protobuf;

message DenseWeights {
  repeated double weight = 1;
}

message SparseWeights {
  repeated Item weight = 1;

  message Item {
    string feature = 1;
    double weight = 2;
  }
}

message DenseCoordinates {
  repeated Row coordinate = 1;

  message Row {
    repeated double element = 1 [packed = true];
  }
}

message SparseCoordinates {
  repeated Row coordinate = 1;

  message Row {
    repeated Item element = 1;

    message Item {
      int32 index = 1;
      double element = 2;
    }
  }
}

message Node {
  int32 output = 1;
  repeated double posteriori = 2;
  bool numerical = 3;
  int32 feature = 4;
  double value = 5;
  Node trueChild = 6;
  Node falseChild = 7;
}

message Tree {

}

message Accumulator {
  repeated Item accumulated = 1;
  message Item {
    string feature = 1;
    double value = 2;
    int32 count = 3;
  }
}